@@ -59,6 +59,7 @@ Changes in current version:
  o Provide OpenSSL style support for multiple threads accessing the same event_base
  o make event_rpcgen.py generate code include event-config.h; reported by Sam Banks.
  o switch thread support so that locks get allocated as they are needed.
+ o make event methods static so that they are not exported; from Andrei Nigmatulin
 
 Changes in 1.4.0:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
